右Canvasに左Canvasの四角を複製して表示するよう修正
ShapeやContainerに設定する座標はStage毎であるということをわかりやすくするためそれぞれのCanvasに背景色を設定

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,2 @@
-<canvas id="myCanvas" width="700" height="600"></canvas>
+<canvas id="leftCanvas" width="700" height="600" style="background-color: greenyellow"></canvas>
+<canvas id="rightCanvas" width="700" height="600" style="background-color: lightblue"></canvas>
